# altar-ui

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
scripts/: build.sh  publish.sh  versioning.py
src/altar_ui/: accordion.py  alert.py  avatar.py  badge.py  breadcrumb.py  button.py  card.py  carousel.py  chart.py  checkbox.py  collapsible.py  dialog.py  dropdown.py  form.py  input.py  label.py  navigation_menu.py  pagination.py  passthrough.py  progress.py  radio.py  separator.py  sidebar.py  switch.py  table.py  tabs.py  textarea.py
src/ui/: accordion.py  alert.py  badge.py  button.py  card.py  carousel.py  checkbox.py  dialog.py  dropdown.py  form.py  input.py  label.py  navigation_menu.py  pagination.py  progress_bar.py  radio.py  separator.py  switch.py  tabs.py  textarea.py
